--- a/bpm-las-morras.html
+++ b/bpm-las-morras.html
@@ -135,7 +135,7 @@ Un documental de 11 minutos que se debe ver!!</i></span></span>
 <br>&nbsp;<br>
 Cuenta la leyenda... que veinte bibliotecas rurales llegaron a los lugares más inverosímiles de la “Colombia profunda” e iniciaron procesos de lectura, escritura, reconciliación y convivencia con las comunidades campesinas y con los excombatientes de las FARC.
 <br>&nbsp;<br>
-Veinte bibliotecarios, plurales en sus prácticas, pero con un mismo espíritu de libertad para transformar las realidades del conflicto armado, se dispusieron durante el año 2017, a recorrer los parajes más abruptos de la geografía de nuestro país, para desarrollar el proyecto de bibliotecas por la paz del Ministerio de Cultura y la Biblioteca Nacional.
+Veinte bibliotecarios, plurales en sus prácticas, pero con un mismo espíritu de libertad para transformar las realidades del conflicto armado, se dispusieron durante el año 2017, a recorrer los parajes más abruptos de la geografía de nuestro país, para desarrollar el proyecto de Bibliotecas para la Paz del Ministerio de Cultura y la Biblioteca Nacional.
 <br>&nbsp;<br>
 De estos parajes de la ruralidad colombiana, San Vicente del Caguán, fue escenario de los encuentros y desencuentros a partir de los libros que se produjeron en las comunidades que vivieron el conflicto armado, y desde dentro de las zonas veredales transitorias de normalización de las FARC, en el primer año de implementación de los acuerdos de paz.
 <br>&nbsp;<br>Un reto que al tiempo despertaba los temores más comunes al pensar vivir en la periferia de Colombia, y animaba a los bibliotecarios por ser los pioneros de esta tarea titánica de saldar parte de las deudas históricas con el campesinado de nuestro país. Y es así como empezó esta aventura de libros, campesinos, escrituras, bibliotecarios, esperanzas, excombatientes, paz
@@ -147,7 +147,7 @@ Consulte el artículo completo <a target="_blank" href="http://people.virginia.e
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="40%" height="3" alt="" />
 <br>
 
-<h4>Escuchar, Dialogar y escribir: El bibliotecario que promueve narraciones "farctásticas</h4>
+<h4>Escuchar, Dialogar y escribir: El bibliotecario que promueve narraciones "farctásticas"</h4>
 
 <i>"... En Mira Valle, sentados alrededor de una mesa larga, varios guerrilleros escuchan la historia que Kevin tiene escrita en su cuaderno: El viejito de Ítaca tuvo 14 hijos con María. Una mañana despertó para darse cuenta de que a ella le faltaba una pierna y para ver cómo, por la puerta de su casa, desaparecía la rana que se la llevaba en la boca.
 <br>&nbsp;<br>
