revise test.html

--- a/test.html
+++ b/test.html
@@ -13,9 +13,8 @@
   <title>Historia de las Bibliotecas Públicas Móviles para la Paz</title>
   <meta name="description" content="Un archivo viviente. ">
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
-  <link rel="canonical" href="/bpm-historia">
+  <link rel="canonical" href="/test.html">
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="stylesheet" href="/assets/css/piedefoto.css" />
  <link rel="alternate" type="application/rss+xml" title="Bibliotecas para la Paz" href="/feed.xml">
 </head>
 
