Corrects structural markup.

--- a/ex-director.html
+++ b/ex-director.html
@@ -70,11 +70,7 @@
 
 <section class="wrapper style8">
 <div class="inner">
-<div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 50px 0px 50px;">
-<table width="50%" border="1" cellpadding="0" cellspacing="0">
-<tr valign="top">
-<td><center><img align src="http://people.virginia.edu/~mav4n/BPMP/images/Henry.png" width="480" height="270" /></center><br>
-<ul>
+<img align src="http://people.virginia.edu/~mav4n/BPMP/images/Henry.png" /><br>
 Henry nos cuenta:<br>
 <i>
 "Es Premio Nacional de Alta Gerencia en 2017. Departamento Administrativo de la Función Pública y Presidencia de la República de Colombia (Coordinador Nacional del Proyecto Bibliotecas Públicas para la Paz).
@@ -86,15 +82,9 @@ Henry nos cuenta:<br>
 </p><p>Ponente, tallerista y conferencista en múltiples espacios regionales, nacionales e internacionales relacionados con la cultura, las bibliotecas, la innovación social, la comunicación y las manifestaciones de las letras y las artes.
 </p><p>Actualmente, se desempeña como <b>Gerente de Proyectos de Innovación Social en Compartamos con Colombia</b>.
 </i>
-</ul>
 
-
-</td>
-</tr>
-</table>
-</div>
 <br>
-<img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
+<img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" alt="" />
 <br>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Henry3.png" width="351" height="287" />
 <br>
@@ -129,7 +119,7 @@ Siempre que se habla de cultura tenemos relatos anecdóticos muy bonitos. Pero a
 </p><p><b>¿Cuál es la diferencia de las necesidades de una biblioteca dentro de la ciudad con una que esté inmersa en una zona rural?</b><br>
 Hay diferencias en términos de infraestructura, pero la principal está en función de qué es lo que debe hacer. Una biblioteca en la ciudad como la EPM puede trabajar en el desarrollo de servicios más especializados para públicos como estudiantes universitarios o colectivos culturales. En el campo el enfoque de los servicios cambia porque el nivel de alfabetización es diferente. Están llamadas a conectar la ruralidad con el mundo de lo urbano para atender las necesidades que tiene el campo y que a veces le dificultan su avance por la forma en la que ha estado el campo.
    <br>
-    <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
+    <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" alt="" />
 	<br>
   <h4 id="biblioteca-pública-móvil-las-morras">Gestionando los premios</h4>
 
