edits bp putumayo

--- a/bp-putumayo.html
+++ b/bp-putumayo.html
@@ -93,14 +93,14 @@ El mayor objetivo como bibliotecaria ha sido fomentar el dialogo, el buen uso de
 </tr>
 </table>
 </div>
-<h2 id="biblioteca-pública-móvil-las-morras">Una nota sobre Gloria</h2>
+<h3 id="biblioteca-pública-móvil-las-morras">Una nota sobre Gloria (Bibliotecaria en La Hormiga, Putumayo)</h3>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria3.png" width="351" height="287" />
 <br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/a5HCMbpWjIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
 <br><i><b>Biblioteca Luis Carlos Galán Sarmiento Valle del Guamuez, La Hormiga, Putumayo, ganadora del Premio Nacional de Bibliotecas 2014
 </b></i></span></span>
-<h4 id="biblioteca-pública-móvil-las-morras">Gloria, bibliotecaria de la Hormiga</h4>
+
 <b>
 Gloria <b>ha construido paz </b>desde los 16 años cuando se fue al colegio desde la casa de sus padres situada en una vereda del Valle de Guamuez, cansada del asedio que le producía estar en medio de la guerrilla, los paramilitares y el ejército. Al colegio fue por las noches ya que de día trabajaba en la casa de un amigo de su papá que se convirtió en el alcalde del pueblo y la nombró a ella regenta de un salón en donde se encontraba lo que entonces llamaban "la biblioteca".
 <br>&nbsp;<br>
@@ -133,94 +133,71 @@ Este texto está entresacado de los siguientes artículos:<br>
 Para entender el contexto político de ese momento del otoño del 2016 en Colombia pueden leer :<br>
 <li><a target="_blank" href="https://issuu.com/leidy731/docs/especial_semana_1795b_de_paz"><b>Especial Semana por la Paz".</a> <i>Revista Semana.</i >17 de septiembre del 2016; edición número 1795.
 </ul>
-<br>&nbsp;<br>
 <hr>
-<br>&nbsp;<br>
-<h2 id="biblioteca-pública-móvil-las-morras">Llegando a la Vereda de La Carmelita ... </h2>
+<section>
+  <h3>Llegando a La Carmelita: Los ex-guerrilleros...</h3>
+    <div class= "gallery">
+      <div>
+        <iframe src="https://rcnhd.cloudvideo.com.co/html5/html5lib/v2.75.1/mwEmbedFrame.php/p/102/uiconf_id/23448285/entry_id/0_ld8le8m9?wid=_102&iframeembed=true&playerId=kaltura_player_1549309444&entry_id=0_ld8le8m9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+        <p>"Cerca de 300 guerrilleros llegaron a zona de concentración en La Carmelita, Putumayo" <br><i>Noticias RCN</i>, 6 febrero 2017</p>
+      </div>
+      <div>
+        <iframe src="https://www.youtube.com/embed/TzVHWTevxxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+        <p>"Llega a La Carmelita último grupo de guerrilleros del Bloque Sur"<i>NC Noticias</i>, 11 febrero 2017</p>
+      </div>
+    </div>
+</section>
 
+<section> 
+  <h3>Y los bibliotecarios...</h3>
+  <div class= "gallery">
+    <div>
+      <iframe src="https://www.youtube.com/embed/rciiF_0SK8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+      <p>"Primera Biblioteca Móvil para la Paz se entregará el lunes 20 de febrero del 2017"</p>
+    </div>
+    <div>
+      <iframe src="https://www.youtube.com/embed/z9t12AaQOQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+      <p>Entrevista a Gloria en Canal Uno Noticias, 13 de febrero de 2017.</p>
+    </div>
+  </div>
+</section>
 
-<div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<h2 id="biblioteca-pública-móvil-las-morras">Los ex-guerrilleros ... </h2>
-</td>
-</tr>
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="260" src="https://rcnhd.cloudvideo.com.co/html5/html5lib/v2.75.1/mwEmbedFrame.php/p/102/uiconf_id/23448285/entry_id/0_ld8le8m9?wid=_102&iframeembed=true&playerId=kaltura_player_1549309444&entry_id=0_ld8le8m9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i><b>"Cerca de 300 guerrilleros llegaron a zona de concentración en La Carmelita, Putumayo"</i> <br>Noticias RCN.com, 6 Febrero 2017</b></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="260" src="https://www.youtube.com/embed/TzVHWTevxxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i><b>"Llega a la Carmelita último grupo de guerrilleros de Bloque Sur"</i> NC Noticias, 11 Febrero 2017</b></span></p>
-</td>
-</tr>
-<tr valign="top">
-<td style="border-width : 0px;">
-<h2 id="biblioteca-pública-móvil-las-morras">Y los bibliotecarios </h2>
-</td>
-</tr>
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="260" src="https://www.youtube.com/embed/rciiF_0SK8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i><b>Primera Biblioteca Móvil para la Paz se entregará el lunes 20 de febrero del 2017</b></i></span>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="260" src="https://www.youtube.com/embed/z9t12AaQOQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i><b>Entrevista a Gloria en Canal Uno Noticias, 13 de febrero de 2017.</i></b></span></p>
-</td>
-</tr>
-</table>
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
 <i><b>"La biblioteca es una institución revolucionaria porque te ayuda a pensar diferente, en lo que quieres pensar y como lo quieres pensar.
 Te ayuda a armar tu mundo como quieras –dijo Gloria Stella–.
-Por eso les dije en el campamento: “Hagamos la revolución, pero con la cabeza, ahora que ustedes están de este lado”.
-</i><br>Arcadia 17 de abril de 2018</b>
-</td>
-</tr>
-</table>
-</div>
+Por eso les dije en el campamento: “Hagamos la revolución, pero con la cabeza, ahora que ustedes están de este lado.”</b></i>
+<br>–Revista Arcadia, 17 de abril de 2018
 
-<br>
 <hr>
-<br>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloriamap.png" width="351" height="287" />
-<h4>¿Dónde queda la Vereda de La Carmelita?</h4>
+<h3>¿Dónde queda La Carmelita?</h3>
 La vereda La Carmelita está ubicada en el municipio de Puerto Asís en el departamento de Putumayo. En 2016 esta vereda se convirtió en una de las 23 zonas veredales que sirvieron para la concentración y entrega de armas de las Farc y que hoy son Espacios Territoriales de Capacitación y Reincorporación.  Durante el otoño del 2017 fue Puerto de Asís una de las primeras municipalidades del país donde se empieza a repartir títulos de propiedad de tierras a campesinos del Putumayo, Este reparto fue una medida incentivadora para que los campesinos, quienes después de muchos años de cultivar coca, decidieran volver a la legalidad sembrando cultivos legales como cacao, caña, yuca y pimienta. Según fuentes gubernamentales para finales del 2017 se repartieron en el Putumayo cerca de 400 títulos de propiedad.
-
-<br>&nbsp;<br>
 <hr>
-<br>&nbsp;<br>
 
- <h2 id="biblioteca-pública-móvil-las-morras">El trabajo en la Vereda de La Carmelita</h2>
-   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria8.png" width="300" height="200" />
-   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria7.png" width="300" height="200" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria4.png" width="200" height="233" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria5.png" width="200" height="233" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria6.png" width="200" height="233" />
-</span><br>
+ <h3 id="biblioteca-pública-móvil-las-morras">El trabajo en la Vereda de La Carmelita</h3>
+ <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria8.png"/>  
+ 
+</span>
 
 <p>La Biblioteca Móvil en la Carmelita se instaló en un edificio del centro de la Vereda que los habitantes utilizan para sus eventos sociales. Allí convivieron durante un año con los habitantes de la vereda donde se organizaron talleres de escritura, se promoción la lectura entre los niños jóvenes y adultos. Se hicieron talleres de fotografía, ciclos de cine, talleres de computadoras. Se insertaron en la comunidad campañas diseñadas a nivel nacional de apoyo y que encontraron un gran eco entre los usuarios de la Biblioteca de la Carmelita. Ejemplos significativos de estas campañas fueron <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b>"Paz al Bosque"<b></a>, donde la Biblioteca Nacional de Colombia y el Instituto Caro y Cuervo unieron esfuerzos durante 2018 para promover el cambio social a través de la escritura creativa. La campaña <i>"Libros, Color y Selva"</i>, que además de libros para las bibliotecas, esta campaña ayudo en la primavera del 2018 a promover la lectura entre los más jóvenes a través del cuento y la poesía.
-<br>&nbsp;<br>
-Lo más importante de todo es que todas estas actividades culturales ayudaron a promover el diálogo … a escuchar y sobre todo a hablar. Y es bien conocido que la palabra bien ejercida ayuda a sanar.
-<br>&nbsp;<br>
-Algo sobresaliente en la gestión de todas las <i>Bibliotecas Públicas Móviles para la Paz</i> es su capacidad para crear grupos locales de apoyo. Son todos <i>"Los Grupos de Amigos"</i> que ayudan a mantener viva la Biblioteca en la comunidad. Los usuarios de la biblioteca de la Carmelita tuvieron, después de todo buena suerte, ya que por razones "burocráticas" Gloria tuvo que dejar la dirección de esta biblioteca tras cuatro meses de intensa labor desde su comienzo en febrero del 2017.
-La buena suerte que ayudo a mitigar su cese es que a partir de ese momento del 2017, Gloria fue una de las personas más activas del <a target="_blank" href="https://www.facebook.com/pg/bpmlacarmelita/posts/"</a>Grupo de Amigos</a> de esta biblioteca, ayudando a extender estos servicios bibliotecarios por las veredas de Putumayo en la campaña nacional del 2018 llamada <i>"Bibliotecas Públicas por las veredas y caminos de la paz"</i>
-<br>&nbsp;<br>
+ 
 
-Y la biblioteca de La Carmelita paso a ser dirigida por Luis Alberto Narváez, otro de los bibliotecarios por la Paz de este proyecto.
+<p><span class="image right"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria5.png"/></span>
+
+<p>Lo más importante de todo es que todas estas actividades culturales ayudaron a promover el diálogo … a escuchar y sobre todo a hablar. Y es bien conocido que la palabra bien ejercida ayuda a sanar.</p>
+
+
+<p>Algo sobresaliente en la gestión de todas las <i>Bibliotecas Públicas Móviles para la Paz</i> es su capacidad para crear grupos locales de apoyo. Son todos <i>"Los Grupos de Amigos"</i> que ayudan a mantener viva la Biblioteca en la comunidad. Los usuarios de la biblioteca de la Carmelita tuvieron, después de todo buena suerte, ya que por razones "burocráticas" Gloria tuvo que dejar la dirección de esta biblioteca tras cuatro meses de intensa labor desde su comienzo en febrero del 2017.
+La buena suerte que ayudo a mitigar su cese es que a partir de ese momento del 2017, Gloria fue una de las personas más activas del <a target="_blank" href="https://www.facebook.com/pg/bpmlacarmelita/posts/"</a>Grupo de Amigos</a> de esta biblioteca, ayudando a extender estos servicios bibliotecarios por las veredas de Putumayo en la campaña nacional del 2018 llamada <i>"Bibliotecas Públicas por las Veredas y Caminos de la Paz."</i>
+
+Y la biblioteca de La Carmelita paso a ser dirigida por Luis Alberto Narváez, otro de los bibliotecarios por la Paz de este proyecto.</p>
 </p>
-<br>
+
 <hr>
-<br>
- <h2 id="biblioteca-pública-móvil-las-morras">Un buen ejemplo del porque todo esto</h2>
+ <h3 id="biblioteca-pública-móvil-las-morras">Un buen ejemplo del por qué de todo esto:</h3>
 
  <P><i>"Jaime es el nombre de guerra de un excombatiente.
 Es un indígena del Putumayo de unos 45 años. Entró a las Farc cuando tenía 28 años y
