--- a/bpm-historia.html
+++ b/bpm-historia.html
@@ -25,9 +25,7 @@
     <!-- Page Wrapper -->
   <div id="page-wrapper">
 
-      <!-- Header -->
-
-
+    <!-- Header -->
 
   <header id="header">
   <h3><a href="https://bibliopaz.scholarslab.org/bpm-historiaenglish.html">English</a> |  <a href="https://bibliopaz.scholarslab.org/index.html">Bibliotecas para la Paz</a></h3>
@@ -64,19 +62,19 @@
       <article id="main">
 
   <header>
-    <h2>Historia <br>de las Bibliotecas Públicas<br> Móviles para la Paz</h2>
-
-   <center>
-  <div class="image"><img src="http://people.virginia.edu/~mav4n/BPMP/images/historia02.jfif" width="475" height="315" alt="Los 20 bibliotecarios. Foto: Daniel Reina" /></div><br>
-  <div class="sup"><i><b>"Los 20 bibliotecarios"</b></i>. Foto: Daniel Reina. <br>
-  Equipo del Proyecto Bibliotecas Públicas Móviles Capacitación en Mosquera, Cundinamarca  <br>
-  publicado en Arcadia, Bogota,ISSN: 1900-589X. 8 de febrero de 2017</div>
-  </center>
+  <h2>Historia <br>de las Bibliotecas Públicas<br> Móviles para la Paz</h2>
   </header>
 
 
 <section class="wrapper style3">
 <div class="inner">
+
+    <p><center>
+        <div class="image"><img src="http://people.virginia.edu/~mav4n/BPMP/images/historia02.jfif" alt="Los 20 bibliotecarios. Foto: Daniel Reina" /></div><br>
+        <div class="sup"><i><b>"Los 20 bibliotecarios"</b></i>. Foto: Daniel Reina. <br>
+        Equipo del Proyecto Bibliotecas Públicas Móviles Capacitación en Mosquera, Cundinamarca  <br>
+        publicado en Arcadia, Bogota,ISSN: 1900-589X. 8 de febrero de 2017</div>
+        </center></p>
 
 <h2 id="biblioteca-pública-móvil-las-morras">El inicio</h2>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/jaramillo.png" alt="" /> <br>
@@ -128,7 +126,7 @@ Extracto de <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/docu
 
 <p>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/TSpBnq50VAo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="200" height="150" src="https://mdstrm.com/embed/5913786bad3651bb0805f8f1?player=589b13f631f1bebd088ff756" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="200" height="150" src="https://mdstrm.com/embed/5913786bad3651bb0805f8f1?player=589b13f631f1bebd088ff756" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/5RNmmU0mJUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/c7uz1lGnOLM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/xNOyAHQWCQ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
