--- a/bpm-conejo.html
+++ b/bpm-conejo.html
@@ -117,7 +117,7 @@ Esta biblioteca cuenta con su propia Escuela de Música Vallenata, un semillero 
 <br><i>Biblioteca Nacional, septiembre del 2018</i>
 <br>
 <center>
-<img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="40%" height="3" alt="" />
+<hr>
 </center>
 <br>
 <p>"El Ministerio de Cultura indicó que uno de los proyectos principales, desde los inicios de la biblioteca, fue la recuperación de las tradiciones del pueblo, entre ellas, el amor por el vallenato, toda vez que en Conejo hace ya varios años existió una agrupación denominada La Dinastía Vallenata, que reunía algunos de los mejores talentos del lugar. Sin embargo, la agrupación se había desintegrado y fue, gracias a la biblioteca, que algunos de los miembros y herederos de la tradición volvieron a encontrarse para componer e interpretar canciones alusivas a la paz, a su pueblo, y a lo que significa la biblioteca para la comunidad.
@@ -159,7 +159,7 @@ Esta biblioteca cuenta con su propia Escuela de Música Vallenata, un semillero 
 </iframe><br><i>El Premio en  Noticias Caracol</i>
 
 <center>
-<h4>La Canción del premio: SIN MIEDO;</h4><br>
+<h4>La Canción del premio: SIN MIEDO</h4><br>
 I<br>
 Ay que bonito los tiempos de ayer, donde no había violencia<br>
 Ni tampoco había guerra, todo era felicidad<br>
@@ -225,10 +225,9 @@ al levantarnos y saber que la guerra había sido cambiada por la reconciliación
 <br>Autor: Raúl Oñate</i><br>
    Publicado en  pag.10 de <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Cartilla.pdf"><b>La mama de la bibliotecas</b></a>. Cartilla vallenata. Escuela de Música Vallenata. Biblioteca Pública de Conejo. 2018.
 
-   <br>
     <hr>
-	<br>
-   <br>&nbsp;<br>
+
+
   </div>
   </section>
 
